[workspace]
members  = ["cwd", "contracts/*", "packages/*"]
resolver = "2"

[workspace.package]
authors      = ["Larry Lyu <larry@cw.software>"]
version      = "0.0.0"
edition      = "2021"
rust-version = "1.73"
homepage     = "https://cw.software"
repository   = "https://github.com/cwsoftware123/cwd"
readme       = "https://github.com/cwsoftware123/cwd#readme"
license      = "UNLICENSED"
publish      = false

[workspace.dependencies]
anyhow             = "1"
base64             = "0.21"
bcrypt             = "0.13"
bech32             = "0.9"
bip32              = "0.5"
blake3             = "1"
bnum               = "0.8.0"
chrono             = { version = "0.4", default-features = false }
clap               = "4"
clru               = "0.4.0"
colored            = "2"
crc32fast          = "1.3.2"
criterion          = "0.4"
derivative         = "2"
dialoguer          = "0.10"
digest             = "0.10"
ed25519-zebra      = "3"
english-numbers    = "0.3"
forward_ref        = "1"
glob               = "0.3.1"
hex                = "0.4"
hex-literal        = "0.3"
home               = "0.5"
josekit            = "0.8"
k256               = "0.13"
leb128             = "0.2"
merk               = { git = "https://github.com/nomic-io/merk", rev = "8009dff" }
proc-macro2        = "1"
prost              = "0.12"
quote              = "1"
# deactivate default features in order to be able to use this on systems without
# access to an entropy souce via getrandom such as wasm32-unknown-unknown
rand               = { version = "0.8", default-features = false }
rand_core          = "0.6"
rand_xoshiro       = { version = "0.6.0", default-features = false }
random-string      = "1"
rocksdb            = { version = "0.18.0", default-features = false }
schemars           = "0.8"
semver             = "1"
serde              = { version = "1", default-features = false }
serde_derive       = "1"
serde_json         = "1"
sha2               = "0.10"
syn                = "1"
target-lexicon     = "0.12"
tempfile           = "3"
tendermint         = "0.28"
tendermint-abci    = "0.28"
tendermint-rpc     = "0.28"
tendermint-proto   = "0.28"
test-case          = "3"
thiserror          = "1.0"
tokio              = "1"
toml               = "0.5"
tracing            = "0.1"
tracing-subscriber = "0.2"
wasmer             = { version = "=4.1.2", default-features = false }
wasmer-middlewares = "=4.1.2"
wat                = "1"

# packages
cosmwasm-crypto        = { path = "./packages/crypto" }
cosmwasm-schema        = { path = "./packages/schema" }
cosmwasm-schema-derive = { path = "./packages/schema-derive" }
cosmwasm-std           = { path = "./packages/std" }
cosmwasm-std-derive    = { path = "./packages/std-derive" }
cosmwasm-vm            = { path = "./packages/vm" }
cw-address-like        = { path = "./packages/address-like" }
cw-item-set            = { path = "./packages/item-set" }
cw-optional-indexes    = { path = "./packages/optional-indexes" }
cw-ownable             = { path = "./packages/ownable" }
cw-ownable-derive      = { path = "./packages/ownable-derive" }
cw-paginate            = { path = "./packages/paginate" }
cw-sdk                 = { path = "./packages/sdk" }
cw-server              = { path = "./packages/server" }
cw-state-machine       = { path = "./packages/state-machine" }
cw-storage-plus        = { path = "./packages/storage-plus" }
cw-storage-plus-derive = { path = "./packages/storage-plus-derive" }
cw-store               = { path = "./packages/store" }
cw-tree                = { path = "./packages/tree" }
cw-utils               = { path = "./packages/utils" }
cw2                    = { path = "./packages/cw2"}
cw3                    = { path = "./packages/cw3" }
serde-json-wasm        = { path = "./packages/serde-json-wasm" }

# contracts
cw-account-multisig = { path = "./contracts/account-multisig" }
cw-bank             = { path = "./contracts/bank" }
cw-token-factory    = { path = "./contracts/token-factory" }

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
overflow-checks  = true
opt-level        = 3
panic            = "abort"
rpath            = false
