[package]
name         = "cwd"
authors      = { workspace = true }
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
homepage     = { workspace = true }
repository   = { workspace = true }
readme       = { workspace = true }
license      = { workspace = true }
publish      = { workspace = true }

[dependencies]
bcrypt             = { workspace = true }
bip32              = { workspace = true }
chrono             = { workspace = true }
clap               = { workspace = true, features = ["derive"] }
colored            = { workspace = true }
cosmwasm-std       = { workspace = true }
cw-sdk             = { workspace = true }
cw-server          = { workspace = true }
cw-state-machine   = { workspace = true }
cw-store           = { workspace = true }
dialoguer          = { workspace = true }
hex                = { workspace = true }
home               = { workspace = true }
josekit            = { workspace = true }
k256               = { workspace = true }
rand_core          = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tendermint         = { workspace = true }
tendermint-abci    = { workspace = true }
tendermint-rpc     = { workspace = true, features = ["http-client"] }
thiserror          = { workspace = true }
tokio              = { workspace = true, features = ["full"] }
toml               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
