[package]
name         = "cw-account-multisig"
authors      = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
homepage     = { workspace = true }
repository   = { workspace = true }
readme       = { workspace = true }
license      = { workspace = true }
publish      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils        = { workspace = true }
cw2             = { workspace = true }
cw3             = { workspace = true }
schemars        = { workspace = true }
serde           = { workspace = true, features = ["derive"] }
thiserror       = { workspace = true }
