[package]
name         = "cw-token-factory"
authors      = { workspace = true }
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
homepage     = { workspace = true }
repository   = { workspace = true }
readme       = { workspace = true }
license      = { workspace = true }
publish      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw2             = { workspace = true }
cw-bank         = { workspace = true, features = ["library"] }
cw-ownable      = { workspace = true }
cw-paginate     = { workspace = true }
cw-sdk          = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils        = { workspace = true }
thiserror       = { workspace = true }
